# ark-monorepo

./: .gitignore  .npmrc  LICENSE  README.md  package-lock.json  package.json  turbo.json
.github/workflows/: main.yml  mobile-pr.yml  pr.yml
apps/chronoperates-api/: .env.example  Dockerfile  README.md  package.json  pyproject.toml  todo.md
apps/chronoperates-api/src/: config.py  main.py  models.py
apps/chronoperates-api/src/services/: claude_service.py  ics_service.py
apps/chronoperates-api/tests/: conftest.py  test_main.py
apps/chronoperates-api/tests/services/: test_claude_service.py  test_ics_service.py
apps/chronoperates-mobile/: .env.example  .eslintrc.js  App.tsx  README.md  app.json  eslint.config.js  jest.config.js  jest.setup.js  package-lock.json  package.json  tailwind.config.js
apps/chronoperates-mobile/src/: config.ts
apps/chronoperates-mobile/src/components/: ImageInputOptions.tsx  ImagePreview.tsx  ProcessingStatus.tsx  ResultsView.tsx
apps/chronoperates-mobile/src/types/: index.ts
apps/chronoperates-web/: .dockerignore  .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  todo.md  tsconfig.app.json  vitest.config.ts
apps/chronoperates-web/scripts/: entrypoint.sh
apps/chronoperates-web/src/: App.test.tsx  App.tsx  config.test.ts  config.ts  index.css  main.tsx  setupTests.ts
apps/chronoperates-web/src/components/: DownloadSection.test.tsx  DownloadSection.tsx  ImageUpload.test.tsx  ImageUpload.tsx  ProcessingStatus.tsx
